# signal-orchestrate

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  orchestrate.schema  skills.md
schema/: lib.schema  signal-orchestrate.concept.schema
src/: lib.rs  schema_emitted.rs  upgrade_handover.rs
src/schema/: lib.rs  mod.rs
tests/: round_trip.rs  schema_contract.rs
