[package]
name         = "signal-orchestrate"
version      = "0.6.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-orchestrate"
description  = "Signal contract — `orchestrate` CLI ↔ orchestrate channel: typed records for role claim/release/handoff/observation plus the workspace activity log."
publish      = false
links        = "signal-orchestrate"
build        = "build.rs"

[lib]
name = "signal_orchestrate"
path = "src/lib.rs"

[features]
default   = ["nota-text"]
nota-text = ["signal-frame/nota-text"]

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-criome = { git = "https://github.com/LiGoldragon/signal-criome.git", branch = "main", default-features = false, features = ["nota-text"] }
signal-harness = { git = "https://github.com/LiGoldragon/signal-harness.git", branch = "main" }
nota   = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
rkyv        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror   = "2"

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", rev = "bc964c4f2945a637890192f0623db851f8320c27" }

[dev-dependencies]
schema = { git = "https://github.com/LiGoldragon/schema.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
